--- a/index.html
+++ b/index.html
@@ -1,1 +1,245 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="styles.css" />
+        <title>Advanced HTML School Page</title>
+    </head>
+    <body>
+        <header>
+            <div class="logo-properties">
+            <a href="https://www.figma.com/file/uXkuSwV8NdWI16heStgvvg/Homepage-(Copy)?node-id=3558%3A229&mode=dev">
+                <img src="images/logo.png" alt="logo" />
+            </a>
+            </div>
+
+            <div> <menu>
+                <a href="#">COURSES</a>
+                <a href="#">PRICING</a>
+                <a href="#">LOGIN</a>
+                </menu>
+            </div>
+        </header>
+
+        <main>
+            <section>
+                <div class="advertise">
+                    <h1>Get schooled</h1>
+                    <p>SMILES   GRIN   LAUGH</p>
+                    <button>REGISTER FOR FREE</button>
+                </div>
+                <div class="smile-winners">
+                    <h2><b>Learn</b> from the pros</h2>
+                    <div class="round-photo1">
+                        <img src="images/1 (1).png" alt="Phillip" />
+                        <div class="name1">
+                        <h3>Phillip Massey</h3>
+                        <p><i>« Smile of the year » <br> 2018-2019</i></p>
+                        </div>
+                    </div>
+                    <div class="round-photo2">
+                        <img src="images/6.png" alt="Nannie" />
+                        <div class="name2">
+                        <h3>Nannie Lawrence</h3>
+                        <p><i>Best « little smile » <br> 2017</i></p>
+                        </div>
+                    </div>
+                    <div class="round-photo3">
+                        <img src="images/7.png" alt="Bruce" />
+                        <div class="name3">
+                        <h3>Bruce Walters</h3>
+                        <p><i>Best « Friend Smile » <br> live performance 2019</i></p>
+                        </div>
+                    </div>
+                    <div class="round-photo4">
+                        <img src="images/8.png" alt="Henry" /><div class="name4">
+                        <h3>Henry Hughes</h3>
+                        <p><i>« 24h smiles » winner <br> 2016 - 2019 </i></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="purple-background">
+                <div class="quote-box">
+                    <img src="images/Bitmap.png" alt="Bitmap"/>
+                
+                    <div class="quote">
+                        <blockquote>
+                            <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                        </blockquote>
+                        <p>Person Name</p>
+                        <p><i>weather presenter</i></p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Video Block -->
+            <section class="video-block">
+                <h1>Most <b>popular</b> tutorials</h1>
+                <div>
+                    <div class="diagonal-smile">
+                        <img src="images/Diagonal Smile.png" alt="Diagonal Smile" />
+                        <h2>Diagonal Smile</h2>
+                        <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+
+                        <!-- Author Block -->
+                        <div class="author-block">
+                            <img src="images/1.png" alt="Phillip" />
+                            <h3>Phillip Massey</h3>
+                        </div>
+
+                        <!-- Rating Block -->
+                        <div>
+                            <div class="stars">
+                                <!-- stars -->
+                                <img src="images/rating.png" alt="star" />
+                                <p>8 min</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Video Block 2 -->
+                <div class="sad-smile">
+                    <img src="images/sad smile.png" alt="sad Smile" />
+                    <h2>Sad Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+
+                    <!-- Author Block -->
+                    <div class="author-block">
+                        <img src="images/1.png" alt="Phillip" />
+                        <h3>Phillip Massey</h3>
+                    </div>
+
+                    <!-- Rating Block -->
+                    <div>
+                        <div class="stars">
+                            <!-- stars -->
+                            <img src="images/rating.png" alt="star" />
+                            <p>8 min</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Video Block 3 -->
+                <div class="natural-smile">
+                    <img src="images/natural smile.png" alt="Natural Smile" />
+                    <h2>Natural Smile</h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+
+                    <!-- Author Block -->
+                    <div class="author-block">
+                        <img src="images/1.png" alt="Phillip" />
+                        <h3>Phillip Massey</h3>
+                    </div>
+
+                    <!-- Rating Block -->
+                    <div>
+                        <div class="stars">
+                            <!-- stars -->
+                            <img src="images/rating.png" alt="star" />
+                            <p>8 min</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Video Block 4 -->
+                <div class="happy-smile">
+                    <img src="images/happy smile.png" alt="happy Smile" />
+                    <h2><b>Happy Smile</b></h2>
+                    <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+
+                    <!-- Author Block -->
+                    <div class="author-block">
+                        <img src="images/1.png" alt="Phillip" />
+                        <h3>Phillip Massey</h3>
+                    </div>
+
+                    <!-- Rating Block -->
+                    <div>
+                        <div class="stars">
+                            <!-- stars -->
+                            <img src="images/rating.png" alt="star" />
+                            <p>8 min</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Membership section -->
+            <section class="membership-block">
+                <h1><b>Free</b> membership</h1>
+                <div>
+                    <div class="column-one">
+                        <img src="images/smile.png" alt="smile" />
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <!-- block 2 -->
+                    <div class="column-two">
+                        <img src="images/smile.png" alt="smile" />
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <!-- block 3 -->
+                    <div class="column-three">
+                        <img src="images/smile.png" alt="smile" />
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <!-- block 4 -->
+                    <div class="column-four">
+                        <img src="images/smile.png" alt="smile" />
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                    <button>REGISTER FOR FREE</button>
+                </div>
+            </section>
+            <!-- FAQ Section -->
+            <section class="FAQ-block">
+                <h1>F.A.Q.</h1>
+                <div>
+                    <article>
+                        <div class="article-column-one">
+                            <hgroup>
+                                <h3>How does this work?</h3>
+                            </hgroup>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <div class="article-column-two">
+                            <hgroup>
+                                <h3>How does this work?</h3>
+                            </hgroup>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="article-column-three">
+                            <hgroup>
+                                <h3>How does this work?</h3>
+                            </hgroup>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <div class="article-column-four">
+                            <hgroup>
+                                <h3>How does this work?</h3>
+                            </hgroup>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <!-- footer section -->
+        <footer>
+            <div>
+                <div class="logo-foot">
+                    <p><img src="images/logo.png" alt="logo" /></p>
+                    <div class="fav-icons">
+                        <p><a href="#"><img src="images/social_icons.png" alt="social_icons"></a></p>
+                    </div>
+                </div>
+                <p class="copyright">©smileschool 2020</p>
+            </div>
+        </footer>
+    </body>
+</html>
